include_HEADERS = \
	libcdata.h

pkginclude_HEADERS = \
	libcdata/definitions.h \
	libcdata/error.h \
	libcdata/extern.h \
	libcdata/features.h \
	libcdata/types.h

EXTRA_DIST = \
	libcdata.h.in \
	libcdata/definitions.h.in \
	libcdata/features.h.in \
	libcdata/types.h.in

DISTCLEANFILES = \
	libcdata.h \
	libcdata/definitions.h \
	libcdata/features.h \
	libcdata/types.h \
	Makefile \
	Makefile.in

