MSVSCPP_FILES = \
	cdata_test_array/cdata_test_array.vcproj \
	cdata_test_btree/cdata_test_btree.vcproj \
	cdata_test_error/cdata_test_error.vcproj \
	cdata_test_get_version/cdata_test_get_version.vcproj \
	cdata_test_list/cdata_test_list.vcproj \
	cdata_test_list_element/cdata_test_list_element.vcproj \
	cdata_test_range_list/cdata_test_range_list.vcproj \
	cdata_test_tree_node/cdata_test_tree_node.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcstring/libcstring.vcproj \
	libcthreads/libcthreads.vcproj \
	libcdata.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	/bin/rm -f Makefile

