MSVSCPP_FILES = \
	cdata_test_array/cdata_test_array.vcproj \
	cdata_test_btree/cdata_test_btree.vcproj \
	cdata_test_btree_node/cdata_test_btree_node.vcproj \
	cdata_test_btree_values_list/cdata_test_btree_values_list.vcproj \
	cdata_test_error/cdata_test_error.vcproj \
	cdata_test_list/cdata_test_list.vcproj \
	cdata_test_list_element/cdata_test_list_element.vcproj \
	cdata_test_range_list/cdata_test_range_list.vcproj \
	cdata_test_range_list_value/cdata_test_range_list_value.vcproj \
	cdata_test_support/cdata_test_support.vcproj \
	cdata_test_tree_node/cdata_test_tree_node.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcthreads/libcthreads.vcproj \
	libcdata.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

DISTCLEANFILES = \
	Makefile \
	Makefile.in

